publish: Documenting installation, usage, supported notifications, etc on README.md, etc.
generated from commit c0ba4d6252b3cd641783deb74e8aebe149f086c7

--- a/Extensions/Notification.html
+++ b/Extensions/Notification.html
@@ -136,7 +136,8 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        
+                        <p>Audio Hardware Notifications</p>
+
                         <a href="../Extensions/Notification/Name.html" class="slightly-smaller">See more</a>
                       </div>
                       <div class="declaration">
