--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Extensions/Notification.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Extensions/Notification.html
@@ -136,7 +136,8 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        
+                        <p>Audio Hardware Notifications</p>
+
                         <a href="../Extensions/Notification/Name.html" class="slightly-smaller">See more</a>
                       </div>
                       <div class="declaration">
