publish: Updating README.md
generated from commit ed17b2f54dfff41eec35150999988c7e4e5c6875

--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/index.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/index.html
@@ -331,15 +331,18 @@ import SimplyCoreAudio
 <tr>
 <th>Name</th>
 <th>Purpose</th>
+<th>User Info</th>
 </tr>
 </thead><tbody>
 <tr>
 <td><code>streamIsActiveDidChange</code></td>
 <td>Called whenever the audio stream <code>isActive</code> flag changes state.</td>
+<td>N/A</td>
 </tr>
 <tr>
 <td><code>streamPhysicalFormatDidChange</code></td>
 <td>Called whenever the audio stream physical format changes.</td>
+<td>N/A</td>
 </tr>
 </tbody></table>
 <h3 id='further-development-amp-patches' class='heading'>Further Development &amp; Patches</h3>
