--- a/Extensions/Notification/Name.html
+++ b/Extensions/Notification/Name.html
@@ -122,8 +122,7 @@
 
                 </div>
               </div>
-            <p>Audio Hardware Notifications</p>
-
+            
           </div>
         </section>
 
@@ -242,6 +241,19 @@
                     </section>
                   </div>
                 </li>
+              </ul>
+            </div>
+            <div class="task-group">
+              <div class="task-name-container">
+                <a name="/Audio%20Device%20Notifications"></a>
+                <a name="//apple_ref/swift/Section/Audio Device Notifications" class="dashAnchor"></a>
+                <div class="section-name-container">
+                  <a class="section-name-link" href="#/Audio%20Device%20Notifications"></a>
+                  <h3 class="section-name"><p>Audio Device Notifications</p>
+</h3>
+                </div>
+              </div>
+              <ul class="item-container">
                 <li class="item">
                   <div>
                     <code>
@@ -609,6 +621,19 @@ audio devices (either physical or virtual.)
                     </section>
                   </div>
                 </li>
+              </ul>
+            </div>
+            <div class="task-group">
+              <div class="task-name-container">
+                <a name="/Audio%20Stream%20Notifications"></a>
+                <a name="//apple_ref/swift/Section/Audio Stream Notifications" class="dashAnchor"></a>
+                <div class="section-name-container">
+                  <a class="section-name-link" href="#/Audio%20Stream%20Notifications"></a>
+                  <h3 class="section-name"><p>Audio Stream Notifications</p>
+</h3>
+                </div>
+              </div>
+              <ul class="item-container">
                 <li class="item">
                   <div>
                     <code>
