--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Extensions.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Extensions.html
@@ -123,6 +123,15 @@
         <section class="section">
           <div class="section-content">
             <div class="task-group">
+              <div class="task-name-container">
+                <a name="/Audio%20Hardware%20Notifications"></a>
+                <a name="//apple_ref/swift/Section/Audio Hardware Notifications" class="dashAnchor"></a>
+                <div class="section-name-container">
+                  <a class="section-name-link" href="#/Audio%20Hardware%20Notifications"></a>
+                  <h3 class="section-name"><p>Audio Hardware Notifications</p>
+</h3>
+                </div>
+              </div>
               <ul class="item-container">
                 <li class="item">
                   <div>
