publish: Improving documentation.
generated from commit 35c415ae4cc7e0c4acfd979f7b3bb0a7cd009fd6

--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/index.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/index.html
@@ -133,6 +133,12 @@
 <li>Creates and destroyes aggregate devices</li>
 <li>Allows subscribing to audio hardware, audio device, and audio stream notifications</li>
 </ul>
+<h3 id='resources' class='heading'>Resources</h3>
+
+<ul>
+<li><a href="https://rnine.github.io/SimplyCoreAudio">API Reference</a></li>
+<li><a href="https://developer.apple.com/documentation/coreaudio">Core Audio</a></li>
+</ul>
 <h3 id='requirements' class='heading'>Requirements</h3>
 
 <ul>
@@ -214,11 +220,6 @@ import SimplyCoreAudio
 <span class="n">observer</span> <span class="o">=</span> <span class="kc">nil</span>
 </code></pre></li>
 </ol>
-<h3 id='documentation' class='heading'>Documentation</h3>
-
-<ul>
-<li><a href="https://rnine.github.io/SimplyCoreAudio">API Documentation</a></li>
-</ul>
 <h3 id='supported-notifications' class='heading'>Supported Notifications</h3>
 <h4 id='audio-hardware-notifications' class='heading'>Audio Hardware Notifications</h4>
 
