--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Extensions/Notification.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Extensions/Notification.html
@@ -122,15 +122,6 @@
         <section class="section">
           <div class="section-content">
             <div class="task-group">
-              <div class="task-name-container">
-                <a name="/Audio%20Hardware%20Notifications"></a>
-                <a name="//apple_ref/swift/Section/Audio Hardware Notifications" class="dashAnchor"></a>
-                <div class="section-name-container">
-                  <a class="section-name-link" href="#/Audio%20Hardware%20Notifications"></a>
-                  <h3 class="section-name"><p>Audio Hardware Notifications</p>
-</h3>
-                </div>
-              </div>
               <ul class="item-container">
                 <li class="item">
                   <div>
@@ -145,7 +136,8 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        
+                        <p>List of supported <code><a href="../Classes/SimplyCoreAudio.html">SimplyCoreAudio</a></code> notifications.</p>
+
                         <a href="../Extensions/Notification/Name.html" class="slightly-smaller">See more</a>
                       </div>
                       <div class="declaration">
